gateway fix